k8s-aws/networkpolicy/core/core-egress-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: core-egress-redis
  namespace: bravo-core-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.13.116/32
    ports:
    - protocol: TCP
      port: 6379
