k8s-aws/networkpolicy/core/core-ingress-monitor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: core-ingress-monitor
  namespace: bravo-core-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 9100
    - protocol: TCP
      port: 9200
